# prediction-market

./: ALL_FIXES_APPLIED.md  Anchor.toml  CPI_ANALYSIS_COMPLETE.md  CPI_BUGS_FOUND.md  DEBUGGING_GUIDE.md  FINAL_FIXES.md  FINAL_SUMMARY.md  FINAL_TEST_STATUS.md  QUICK_REFERENCE.md  README.md  TESTING_NOTES.md  TEST_RESULTS_SUMMARY.md  package-lock.json  package.json  rustc-ice-2025-09-20T21_25_14-81995.txt  rustc-ice-2025-09-20T21_47_39-3213.txt  tsconfig.json
programs/market_program/: Cargo.toml
programs/market_program/src/: error.rs  lib.rs
programs/market_program/src/instructions/: buy_bet.rs  collect_reward.rs  deposit_collateral.rs  get_reward.rs  initialize.rs  initialize_with_permission.rs  mod.rs  sell_bet.rs  update_config.rs
programs/market_program/src/instructions/admin/: close_permissioned_pda.rs  create_config.rs  create_permisioned_pda.rs  initialize_ctf_mints.rs  initialize_vault.rs  merge_to_collateral.rs  mod.rs  resolve_market.rs  split_collateral.rs  update_market_config.rs
programs/market_program/src/states/: collateral_vault.rs  market_config.rs  mod.rs  oracle_authority.rs  vault.rs
programs/market_program/src/utils/: mod.rs  token.rs
programs/oracle_adapter_contract/: Cargo.toml
programs/oracle_adapter_contract/src/: errors.rs  lib.rs
programs/oracle_adapter_contract/src/instructions/: initialize.rs  mod.rs  trigger.rs
programs/oracle_adapter_contract/src/states/: market_config.rs  mod.rs  resolution_config.rs
tests/: buy-bet.test.ts  buy-bet.ts  get-reward.test.ts  get-reward.ts  helpers.test.ts  helpers.ts  prediction-market.ts  (+3 more)
(+12 files in other folders)
