[package]
name = "oracle_adapter_contract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "oracle_adapter_contract"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]



[dependencies]
anchor-lang = "0.31.1"
pyth-solana-receiver-sdk = "1.0.1"
market_program = { path = "../market_program", features = ["cpi"] }
anchor-spl = { version = "0.31.1", features = ["memo", "metadata"] }

